********** SPL 1.6 Alpha 1 **********
===== Build 0070 2019/04/18 =====

* Added portable list, pair, set creation:
    * List creation with [a, b, c]
    * Pair creation with {a = x, b = y, c = z}
    * Set creation with {a, b, c}
* Bug fixes:
    * Fixed that getitem and setitem not working properly
* Optimizations:
    * Optimized codes in parser

********** SPL 1.5.2 **********
===== Build 0069 2019/04/17 =====

* Unittest updates:
    * Unittest module now prints out the failed test to stderr
* Bug fixes:
    * The key type of returning pair of native.variables() is python native str

********** SPL 1.5.1 **********
===== Build 0068 2019/04/17 =====

* Make the Function a SPL object
* Added the access from SPL code to python instance
* Changed the annotations from dictionary to spl Set
* Changed the mechanism of string and print
* Bug fixes:
    * if-else without braces

********** SPL 1.5 Release **********
===== Build 0067 2019/04/14 =====

* Changed the type name of system, os, and natives to UpperCamel

********** SPL 1.5 Release Candidate 3 **********
===== Build 0066 2019/04/13 =====

* Bug fixes:
    * Fixed the file directory problem
    * Fixed the bug that operator 'instanceof' returns false for all native types
* Interpreter code optimization:
    * Set the '__' suffix as the signal of spl internal method
    * Change the native types' type_name() to @classmethod type_name__()

********** SPL 1.5 Release Candidate 2 **********
===== Build 0065 2019/04/13 =====

* Bug fixes:
    * Fixed the unknown docstring from native types
    * Fixed that the file reader takes wrong type of string
* Interpreter code optimization:
    * Optimized the invoke of static method in native types

********** SPL 1.5 Beta 4 **********
===== Build 0064 2019/04/13 =====

* New syntax:
    * Assignment now be treated the same as any other binary expressions
* Redesign the parser on the function build system
* New functions in "math":
    * gcd(x, y)